regression/smv/syntax-errors/syntax3.smv
MODULE main

VAR foobar : 1.. not_a_number;

